[package]
name = "lcd-st7789"
version = "0.0.0"
authors = ["Xeu <thankrain@qq.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
rust-version = "1.59"

[dependencies]
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
riscv = "0.10.0"
riscv-rt = "0.11.0"
st7789 = "0.7.0"

# this lets you use `cargo fix`!
[[bin]]
name = "lcd-st7789"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
