[package]
name = "lcd-st7789"
version = "0.0.0"
authors = ["Xeu <thankrain@qq.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
rust-version = "1.59"

[dependencies]
#panic-halt = "0.2.0"
riscv = "0.10.0"
riscv-rt = "0.11.0"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
embedded-hal = "0.2"
st7789 = "0.7.0"
spin = "0.9.4"
globals = "1.0.5"
ch32v20x-hal = { path = "ch32v20x-hal" ,features = ["device-selected","ch32v203"]}
good_memory_allocator = "0.1.7"
#
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
# this lets you use `cargo fix`!
[[bin]]
name = "lcd-st7789"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
